Bug 1868479 - Fix backdrop-filter with SVG filters r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D195671